# NN-CUDA

./: .gitattributes  .gitignore  CMakeLists.txt  DNN.java  Makefile  annotations.csv  csi.csv  csi_data_parser.py  csi_pruned.csv  csi_pruned2.csv  csi_pruned3.csv  csv_prune.py  cuda.cpp  data_format_README.md  dnn.py  main.cpp
